<resources>
    <string name="app_name">RoboBlog</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="something_was_wrong">Something was wrong</string>
    <string name="saved">Saved</string>
    <string name="error">Something was wrong</string>
    <string name="zero">0</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="exit">Exit</string>
    <string name="updated">Updated</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="send">Send</string>

    <string name="image_download_progress_title">Image loading</string>
    <string name="image_download_progress_text">Loading started, please wait</string>
    
    <!-- Empty state strings -->
    <string name="no_articles_yet">No Articles Yet</string>
    <string name="create_your_first_article">You haven\'t created any articles yet.\nStart sharing your thoughts with the world!</string>
    <string name="create_article">Create Article</string>
</resources>
